# Zeus

./: .dockerignore  .gitignore  AGENTS.md  AppleWWDRCAG3.cer  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MEMORY.md  README.md  SOUL.md  build.rs
apps/ZeusWeb/: .gitignore  BUNDLE_SIZE.md  Cargo.toml  SLICE_A_MAPPING.md  TAILWIND_MIGRATION.md  Trunk.toml  build.rs  index.html  input.css  manifest.json  package-lock.json  package.json  tailwind.css
apps/ZeusWeb/.cargo/: config.toml
apps/ZeusWeb/docs/: CLOSE_REPORT_65_C2.md
apps/ZeusWeb/office-game/: game.js  layout.js
apps/ZeusWeb/src/: lib.rs  main.rs  prompt.rs
apps/ZeusWeb/static/: sw.js
apps/ZeusWeb/tests/: qrcode_smoke.rs  wasm_diff_viewer.rs  wasm_markdown.rs  wasm_smoke.rs
crates/zeus-acp/: Cargo.toml
crates/zeus-acp/src/: lib.rs
crates/zeus-aegis/: Cargo.toml
crates/zeus-aegis/src/: approvals.rs  audit.rs  audit_jsonl.rs  credential_vault.rs  keychain.rs  lib.rs  manifest.rs  merkle.rs  network.rs  permissions.rs  rate_limiter.rs  risk.rs  sandbox.rs  taint.rs  tool_replay.rs
crates/zeus-agent/: Cargo.toml
crates/zeus-agent/src/: agent_loop.rs  auth_rotation.rs  channel_builder.rs  channels.rs  concurrency.rs  constitution.rs  cook.rs  hooks.rs  intelligence.rs  lib.rs  loop_guard.rs  message_store_filter.rs  metrics.rs  migration.rs  overflow.rs  process_manager.rs  research.rs  router.rs  shared_prompt.rs  subagent.rs  survival.rs  token_alert.rs  tools.rs
crates/zeus-agent/tests/: agent_integration.rs  document_extract.rs  kimi_orphan_segmentation.rs  tool_registry.rs
crates/zeus-agora/: Cargo.toml
crates/zeus-agora/src/: coordinator.rs  lib.rs  marketplace.rs  protocol.rs
crates/zeus-api/: Cargo.toml
crates/zeus-api/src/: api_key.rs  approvals.rs  channels.rs  chat_broadcast.rs  config_watcher.rs  cook_wiring.rs  cost_router.rs  db.rs  docs.rs  extension_store.rs  extensions.rs  graphql.rs  ide_bridge.rs  identity.rs  inbound.rs  lib.rs  mdns.rs  middleware.rs  node_client.rs  node_registry.rs  node_ws.rs  plan_store.rs  rate_limit.rs  registry.rs  routes.rs  security_headers.rs  session_maintenance.rs  upload_handlers.rs  uploads.rs  url_validator.rs  webhook_outbound.rs  webhook_triggers.rs  websocket.rs  ws_auth.rs
crates/zeus-api/tests/: docs_integration.rs  inbound_integration.rs  pantheon_integration.rs  tool_drift_integration.rs  uploads_integration.rs
crates/zeus-athena/: Cargo.toml
crates/zeus-athena/src/: config.rs  cross_ref.rs  lib.rs  notes.rs  obsidian.rs  summary.rs
crates/zeus-auth/: Cargo.toml
crates/zeus-auth/src/: callback.rs  flow.rs  lib.rs  pkce.rs
crates/zeus-browser/: Cargo.toml
crates/zeus-browser/src/: ai_agent.rs  cdp.rs  lib.rs  meet.rs  page_cache.rs  stealth.rs  tools.rs
crates/zeus-channels/: Cargo.toml
crates/zeus-channels/src/: accounts.rs  bluebubbles.rs  chunker.rs  circuit_breaker.rs  config.rs  debouncer.rs  discord.rs  discord_voice.rs  discovery.rs  email.rs  feishu.rs  filters.rs  googlechat.rs  health.rs  imessage.rs  instagram.rs  irc.rs  lib.rs  line.rs  matrix.rs  mattermost.rs  mcp_bridge.rs  media.rs  media_extract.rs  mqtt.rs  nextcloud.rs  nostr.rs  pairing.rs  pipeline.rs  plugins.rs  policy.rs  rich.rs  rich_render.rs  sanitize.rs  signal.rs  slack.rs  slack_history.rs  slack_mrkdwn.rs  slack_relay.rs  sms.rs  (+20 more)
crates/zeus-core/: Cargo.toml
crates/zeus-core/src/: build_info.rs  cook_state.rs  fleet_telemetry.rs  inbox.rs  lib.rs  migration.rs  persona.rs  platform.rs  sanitize.rs  session_lane.rs  soul.rs  team_memory.rs  turn_boundary.rs  validator.rs
crates/zeus-core/tests/: config_roundtrip.rs  e2e_core_journey.rs  persona_corpus.rs  soul_pipeline.rs  x_twitter_credentials.rs
crates/zeus-council/: Cargo.toml
crates/zeus-council/src/: anonymizer.rs  lib.rs  pipeline.rs  ranking.rs
crates/zeus-economy/: Cargo.toml
crates/zeus-economy/src/: db.rs  domain.rs  lib.rs
crates/zeus-extensions/: Cargo.toml
crates/zeus-extensions/bridge/: openclaw_bridge.ts
crates/zeus-extensions/src/: lib.rs  openclaw.rs
crates/zeus-hermes/: Cargo.toml
crates/zeus-hermes/src/: escalation.rs  formatter.rs  lib.rs  routing.rs
crates/zeus-llm/: Cargo.toml
crates/zeus-llm/src/: capabilities.rs  codex.rs  cost.rs  fallback.rs  glm_coding.rs  json_healing.rs  kimi_code.rs  lib.rs  middle_out.rs  minimax.rs  minimax_coding.rs  model_variants.rs  multimodal.rs  oauth.rs  ollama.rs  pipeline.rs  provider_health.rs  qwen_coding.rs  qwen_oauth.rs  response_cache.rs  router.rs
crates/zeus-marketplace/: Cargo.toml
crates/zeus-marketplace/src/: lib.rs  settlement.rs
crates/zeus-mcp/: Cargo.toml
crates/zeus-mcp/src/: agents.rs  client.rs  handlers.rs  lib.rs  protocol.rs  server.rs  tool_registry.rs
crates/zeus-memory/: Cargo.toml
crates/zeus-memory/src/: indexer.rs  lib.rs
crates/zeus-mnemosyne/: Cargo.toml
crates/zeus-mnemosyne/src/: community.rs  db.rs  dedup.rs  graph.rs  graph_search.rs  importance.rs  knowledge_extract.rs  lib.rs  promotion.rs  summarizer.rs  supersession.rs
crates/zeus-mnemosyne/tests/: auto_memory_fabrication.rs  cleanup_bin_smoke.rs  e2e_memory_journey.rs  graph_tests.rs  lifecycle_tests.rs
crates/zeus-nous/: Cargo.toml
crates/zeus-nous/src/: complexity.rs  confidence.rs  consolidation.rs  context_journal.rs  critic.rs  goal_tracker.rs  lib.rs
crates/zeus-orchestra/: Cargo.toml
crates/zeus-orchestra/src/: dynamic.rs  lib.rs  pantheon.rs  peer_review.rs  protocol.rs  recommend.rs  scheduler.rs  state.rs
crates/zeus-pantheon-server/: Cargo.toml
crates/zeus-pantheon-server/src/: auth.rs  channels.rs  client.rs  config.rs  lib.rs  messages.rs  protocol.rs  rate_limiter.rs  server.rs  state.rs  users.rs
crates/zeus-plugins/: Cargo.toml
crates/zeus-plugins/src/: lib.rs  loader.rs  plugin.rs  registry.rs
crates/zeus-prometheus/: Cargo.toml
crates/zeus-prometheus/src/: acceptance.rs  agent_director.rs  agent_pool.rs  autonomy.rs  db.rs  (+52 more)
crates/zeus-sandbox/: Cargo.toml
crates/zeus-session/: Cargo.toml
crates/zeus-setup/: Cargo.toml
crates/zeus-skills/: Cargo.toml
(+1013 files in other folders)
