[workspace]
resolver = "2"
exclude = ["apps/ZeusWeb"]
members = [
    "crates/zeus-council",
    "crates/zeus-core",
    "crates/zeus-llm",
    "crates/zeus-memory",
    "crates/zeus-session",
    "crates/zeus-agent",
    "crates/zeus-tui",
    "crates/zeus-mcp",
    "crates/zeus-api",
    "crates/zeus-nous",
    "crates/zeus-prometheus",
    "crates/zeus-channels",
    "crates/zeus-hermes",
    "crates/zeus-mnemosyne",
    "crates/zeus-athena",
    "crates/zeus-aegis",
    "crates/zeus-talos",
    "crates/zeus-browser",
    "crates/zeus-skills",
    "crates/zeus-voice",
    "crates/zeus-tts",
    "crates/zeus-sandbox",
    "crates/zeus-orchestra",
    "crates/zeus-extensions",
    "crates/zeus-acp",
    "crates/zeus-marketplace",
    "crates/zeus-economy",
    "crates/zeus-agora",
    "crates/zeus-wallet",
    "crates/zeus-setup",
    "crates/zeus-pantheon-server",
    "crates/zeus-templates",
    "crates/zeus-solana",
    "crates/zeus-auth",
    "crates/zeus-lsp",
    "crates/zeus-plugins",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Zeus Lab <hello@zeuslab.ai>"]
repository = "https://github.com/zeuslabai/Zeus"

[workspace.dependencies]
# Zeus crates
zeus-core = { path = "crates/zeus-core" }
zeus-llm = { path = "crates/zeus-llm" }
zeus-memory = { path = "crates/zeus-memory" }
zeus-session = { path = "crates/zeus-session" }
zeus-agent = { path = "crates/zeus-agent" }
zeus-mcp = { path = "crates/zeus-mcp" }
zeus-api = { path = "crates/zeus-api" }
zeus-nous = { path = "crates/zeus-nous" }
zeus-prometheus = { path = "crates/zeus-prometheus" }
zeus-channels = { path = "crates/zeus-channels" }
zeus-hermes = { path = "crates/zeus-hermes" }
zeus-mnemosyne = { path = "crates/zeus-mnemosyne" }
zeus-athena = { path = "crates/zeus-athena" }
zeus-aegis = { path = "crates/zeus-aegis" }
zeus-talos = { path = "crates/zeus-talos" }
zeus-browser = { path = "crates/zeus-browser" }
zeus-skills = { path = "crates/zeus-skills" }
zeus-voice = { path = "crates/zeus-voice" }
zeus-tts = { path = "crates/zeus-tts" }
zeus-sandbox = { path = "crates/zeus-sandbox" }
zeus-orchestra = { path = "crates/zeus-orchestra" }
zeus-extensions = { path = "crates/zeus-extensions" }
zeus-acp = { path = "crates/zeus-acp" }
zeus-marketplace = { path = "crates/zeus-marketplace" }
zeus-economy = { path = "crates/zeus-economy" }
zeus-wallet = { path = "crates/zeus-wallet" }
zeus-agora = { path = "crates/zeus-agora" }
zeus-setup = { path = "crates/zeus-setup" }
zeus-pantheon-server = { path = "crates/zeus-pantheon-server" }
zeus-templates = { path = "crates/zeus-templates" }
zeus-solana = { path = "crates/zeus-solana" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
tokio-native-tls = "0.3"
tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# HTTP/Web
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "fs"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
native-tls = "0.2"

ureq = { version = "2.10", features = ["tls"] }

# TUI
ratatui = "0.30"
crossterm = "0.28"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
uuid = { version = "1.11", features = ["v4"] }
ulid = "1.1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
calamine = "0.26"
lopdf = "0.32"
regex = "1.10"
glob = "0.3"
sysinfo = "0.31"
hostname = "0.4"
hex = "0.4"
tempfile = "3"
libc = "0.2"

# OAuth/Crypto
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
open = "5.3"
url = "2.5"
urlencoding = "2.1"
aes-gcm = "0.10"
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["rand_core", "pem", "zeroize"] }
bs58 = "0.5"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
jsonwebtoken = "9"
data-encoding = "2"
humantime = "2"

# Markdown
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "functions"] }

# Chat adapters
serenity = { version = "0.12", features = ["voice"] }
songbird = { version = "0.4", default-features = false, features = ["driver", "receive", "gateway", "serenity", "native"] }
slack-morphism = "2.0"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "tokio1", "builder", "hostname", "pool", "smtp-transport"] }
async-imap = "0.10"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
grammers-client = "0.6"
grammers-session = "0.5"
matrix-sdk = { version = "0.16", default-features = false, features = ["rustls-tls"] }
mime = "0.3"
rumqttc = { version = "0.24", features = ["use-rustls"] }

nostr = "0.36"

async-graphql = { version = "6", features = ["chrono", "uuid", "graphiql"] }
async-graphql-axum = "6"

# Scheduling
cron = "0.14"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# gRPC
tonic = "0.12"
prost = "0.13"

# Testing
wiremock = "0.6"

# FFI
uniffi = { version = "0.28", features = ["cli"] }

# OpenTelemetry / Observability
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
tracing-opentelemetry = "0.28"

# WASM runtime
wasmtime = "28"
wasmtime-wasi = "28"

# Dynamic plugin loading
libloading = "0.8"
notify = { version = "7", features = ["serde"] }
zeroize = "1.8"
criterion = { version = "0.5", features = ["html_reports"] }

[package]
name = "zeus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Autonomous AI assistant with cognitive engine, multi-channel chat, and 4 native clients"

[[bin]]
name = "zeus"
path = "src/main.rs"

[features]
default = ["mcp"]
mcp = ["dep:zeus-mcp"]
matrix = ["zeus-channels/matrix", "zeus-agent/matrix"]

[dependencies]
zeus-core.workspace = true
zeus-llm.workspace = true
zeus-memory.workspace = true
zeus-session.workspace = true
zeus-agent.workspace = true
zeus-tui = { path = "crates/zeus-tui" }
zeus-api.workspace = true
zeus-mcp = { workspace = true, optional = true }
zeus-talos.workspace = true
zeus-mnemosyne.workspace = true
zeus-athena.workspace = true
zeus-aegis.workspace = true
zeus-hermes.workspace = true
zeus-nous.workspace = true
zeus-prometheus.workspace = true
zeus-channels.workspace = true
zeus-skills.workspace = true
zeus-pantheon-server.workspace = true
zeus-setup.workspace = true
zeus-wallet.workspace = true
tokio.workspace = true
tokio-util = { workspace = true }
dirs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde_json.workspace = true
reqwest.workspace = true
toml.workspace = true
axum.workspace = true
tower-http.workspace = true
async-trait.workspace = true
ureq.workspace = true
uuid.workspace = true
chrono.workspace = true
hostname.workspace = true
libc.workspace = true
serde = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
chrono.workspace = true
