[package]
name = "zeus-web"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.16", features = ["csr"] }
leptos_router = "0.8"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlAudioElement",
    "HtmlMediaElement",
    "Event",
    "KeyboardEvent",
    "MouseEvent",
    "InputEvent",
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Storage",
    "Location",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "BaseAudioContext",
    "Crypto",
    "SubtleCrypto",
    "Url",
    "UrlSearchParams",
    "Blob",
    "BlobPropertyBag",
    "BlobEvent",
    "FormData",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MediaRecorder",
    "MediaRecorderOptions",
    "Navigator",
    "Clipboard",
    "EventTarget",
    "File",
    "FileList",
    "FileReader",
    "DragEvent",
    "DataTransfer",
    "AddEventListenerOptions",
    "Performance",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
gloo-net = { version = "0.6", features = ["http", "websocket", "json"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
base64 = "0.22"
qrcode = { version = "0.14", default-features = false }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
