[package]
name = "zeus-aegis"
description = "Security, sandboxing, and credential management for Zeus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
zeus-core = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Encryption
ring = { workspace = true }
aes-gcm = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Hex encoding
hex = "0.4"

# Regex (taint pattern detection)
regex = { workspace = true }

# Compression (log rotation)
flate2 = "1.0"

# Ed25519 signing (agent manifests)
ed25519-dalek = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# Identifiers
uuid = { workspace = true }

# HTTP client (LLM classifier in auto mode)
reqwest = { workspace = true }

# macOS keychain and sandbox
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"

# Linux secret service and sandbox
[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "3.0", features = ["rt-tokio-crypto-rust"] }
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }
