[package]
name = "zeus-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Agent loop and tools for Zeus"

[features]
default = ["audio"]
audio = ["zeus-channels/audio", "zeus-talos/audio"]
matrix = ["zeus-channels/matrix"]

[dependencies]
zeus-core.workspace = true
zeus-llm.workspace = true
zeus-memory.workspace = true
zeus-session.workspace = true
zeus-mnemosyne.workspace = true
zeus-athena.workspace = true
zeus-aegis.workspace = true
zeus-hermes.workspace = true
zeus-nous.workspace = true
zeus-talos = { workspace = true, default-features = false }
zeus-browser.workspace = true
zeus-channels = { workspace = true, default-features = false }
zeus-skills.workspace = true
zeus-extensions.workspace = true
zeus-council = { path = "../zeus-council" }
zeus-agora.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
futures.workspace = true
dirs.workspace = true
async-trait.workspace = true
regex.workspace = true
toml.workspace = true
url.workspace = true
sha2.workspace = true
zip.workspace = true
quick-xml.workspace = true
calamine.workspace = true
lopdf.workspace = true

[dev-dependencies]
tempfile = "3"
