[package]
name = "zeus-agora"
description = "The Agora — agent skill marketplace for Zeus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
zeus-wallet.workspace = true
zeus-economy.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio.workspace = true
tracing.workspace = true
thiserror = "2"

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
