[package]
name = "zeus-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "REST API gateway for Zeus"

[[bin]]
name = "zeus-api"
path = "src/bin/server.rs"

[lib]
name = "zeus_api"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
zeus-core.workspace = true
zeus-council = { path = "../zeus-council" }
zeus-agent.workspace = true
zeus-skills.workspace = true
zeus-templates.workspace = true
zeus-memory.workspace = true
zeus-mnemosyne.workspace = true
zeus-session.workspace = true
zeus-llm.workspace = true
zeus-auth = { path = "../zeus-auth" }
zeus-tts = { path = "../zeus-tts" }
zeus-sandbox = { path = "../zeus-sandbox" }
zeus-orchestra = { path = "../zeus-orchestra" }
zeus-prometheus = { path = "../zeus-prometheus" }
zeus-nous.workspace = true
zeus-extensions = { path = "../zeus-extensions" }
zeus-economy = { path = "../zeus-economy" }
zeus-wallet.workspace = true
zeus-marketplace = { path = "../zeus-marketplace" }
zeus-agora = { path = "../zeus-agora" }
zeus-solana = { path = "../zeus-solana" }
zeus-talos.workspace = true
zeus-browser.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
pulldown-cmark.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs.workspace = true
sha2.workspace = true
hmac = "0.12"
zeus-athena.workspace = true
toml.workspace = true
chrono.workspace = true
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "fs"] }
futures.workspace = true
async-stream.workspace = true
uuid.workspace = true
reqwest.workspace = true
urlencoding.workspace = true
base64.workspace = true
notify.workspace = true
zeus-channels = { path = "../zeus-channels" }
zeus-voice = { path = "../zeus-voice" }
zeus-aegis = { path = "../zeus-aegis" }
image = "0.25"
lopdf.workspace = true
dashmap = "6.1"
rusqlite.workspace = true
hostname.workspace = true
ring.workspace = true
hex.workspace = true
serde_urlencoded = "0.7"
totp-rs.workspace = true
jsonwebtoken.workspace = true
data-encoding.workspace = true
rand.workspace = true
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
hyper = "1"
http-body-util = "0.1"
tokio = { workspace = true, features = ["test-util", "macros"] }
filetime = "0.2"
