[package]
name = "zeus-athena"
description = "Documentation engine for Zeus - Obsidian + Apple Notes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
zeus-core = { workspace = true }
zeus-mnemosyne = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Directories
dirs = "6.0"

# Text processing
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }
