[package]
name = "zeus-auth"
description = "OAuth PKCE authentication flows for Zeus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
zeus-core.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
hex = "0.4"
urlencoding = "2.1"
regex.workspace = true
