[package]
name = "zeus-browser"
description = "Chrome DevTools Protocol browser automation for Zeus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zeus-core.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
futures-util.workspace = true
base64.workspace = true
uuid.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
