[package]
name = "zeus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types and configuration for Zeus"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
chrono.workspace = true
dirs.workspace = true
uuid.workspace = true
base64.workspace = true
regex.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
criterion = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "core_benchmarks"
harness = false
