[package]
name = "zeus-council"
version.workspace = true
edition = "2021"

[dependencies]
zeus-core = { path = "../zeus-core" }
zeus-llm = { path = "../zeus-llm" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
