[package]
name = "zeus-economy"
description = "SQLite-backed token/credit economy for agent wallets, minting, burning, and atomic multi-party transactions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zeus-core.workspace = true
rusqlite.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile.workspace = true
