[package]
name = "zeus-extensions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Deno extension runtime and OpenClaw compatibility for Zeus"

[dependencies]
zeus-core = { path = "../zeus-core" }
tokio = { workspace = true, features = ["full"] }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dirs.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
