[package]
name = "zeus-hermes"
description = "Notification routing for Zeus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zeus-core.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
