[package]
name = "zeus-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Unified LLM provider for Zeus"

[dependencies]
zeus-core.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
futures.workspace = true
tracing.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
ring.workspace = true
base64.workspace = true
rand.workspace = true
open.workspace = true
urlencoding.workspace = true
chrono.workspace = true
dirs.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
