[package]
name = "zeus-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) server for Zeus"

[[bin]]
name = "zeus-mcp"
path = "src/bin/server.rs"

[lib]
name = "zeus_mcp"
path = "src/lib.rs"

[features]
default = ["audio"]
audio = ["zeus-agent/audio", "zeus-channels/audio", "zeus-talos/audio"]

[dependencies]
zeus-core.workspace = true
zeus-agent = { workspace = true, default-features = false }
zeus-memory.workspace = true
zeus-mnemosyne.workspace = true
zeus-session.workspace = true
zeus-talos = { workspace = true, default-features = false }
zeus-llm.workspace = true
zeus-channels = { workspace = true, default-features = false }
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs.workspace = true
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-stream.workspace = true
reqwest.workspace = true
hostname.workspace = true

[dev-dependencies]
tempfile = "3"
