[package]
name = "zeus-pantheon-server"
description = "Pantheon IRC-style WebSocket server for Zeus agent collaboration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Async
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Crypto
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# IDs + time
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Concurrency
dashmap = "6.1"
tokio-stream = { version = "0.1" }

# Error handling
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
