[package]
name = "zeus-plugins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Plugin system foundation for Zeus — trait, registry, and directory loader"

[dependencies]
zeus-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
libloading.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
