[package]
name = "zeus-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM sandbox with capability-based security for Zeus"

[dependencies]
zeus-core = { path = "../zeus-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
