[package]
name = "zeus-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "JSONL session storage for Zeus"

[dependencies]
zeus-core.workspace = true
zeus-llm = { path = "../zeus-llm" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
regex.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
toml.workspace = true
