[package]
name = "zeus-setup"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Professional TUI installer, builder, and deployer for Zeus"

[[bin]]
name = "zeus-setup"
path = "src/main.rs"

[dependencies]
# TUI
ratatui.workspace = true
crossterm.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# CLI
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# HTTP
reqwest.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
dirs.workspace = true
chrono.workspace = true

# Internal
zeus-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
